css/styles.css
/* ... */
@media screen and (max-width: 420px) {
    .rectangle {
        width: 260px;
        height: 80px;
    }
}

.section-1-content-left button {
    width: 200px;
    height: 60px;
    background: #FB765F;
    border-radius: 30px;
    font-family: Open Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
    line-height: 25px;
    color: #FFFFFF;
    margin: 30px 0;
}

.navbar-menu:hover {
    background-color: rgb(208, 205, 205);
}

.arrow-group {
    width: 90px;
}

.section-1-content-right {
    padding-bottom: 40px;
    margin: 0 auto;
}

.card {
    margin: 20px 0;
    padding: 22px;
    box-sizing: border-box;
    width: 500px;
    height: 150px;
    background: #FFFFFF;
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
}

@media screen and (max-width: 710px) {
    .card {
        width: 349px;
        height: 266px;
        text-align: center;
    }

    .card img {
        margin: 0 auto;
    }
}

@media screen and (max-width: 420px) {
    .card {
        width: 300px;
        height: 266px;
        text-align: center;
    }

    .card img {
        margin: 0 auto;
    }
}

.card-text .up {
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 29px;
    color: #000000;
}

.card-text .down {
    font-family: Open Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
    line-height: 25px;
    color: #377EF9;
}

.section-1-content-right button {
    margin-top: 30px;
    width: 200px;
    height: 50px;
    border: 2px solid #FB765F;
    background-color: #ffffff;
    box-sizing: border-box;
    border-radius: 30px;
    font-family: Open Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 22px;
    color: #FB765F;
}

.section-1-content-right button:hover {
  color: #fb4525;
  border-color: #fb4525;
}

@media screen and (max-width: 1100px) {
    .section-1-content {
        flex-direction: column;
    }

    .section-1-content-left {
        width: 100%;
    }
}

.section-1-content-left button:hover,
.section-3-card-contentBlock button:hover,
.section-5-form button:hover,
.section-4-slider-item button:hover {
    background: rgb(226, 92, 69);
}

.section-1-content-right button:hover {
    border-color: rgb(226, 92, 69);
}

/* ВТОРАЯ СЕКЦИЯ */

#section-2 {
    background: rgba(241, 241, 241, 0.9077);
    padding: 50px 0;
}

.section-2-slider-item {
    padding: 50px 0;
    width: 160px;
    height: 150px;
    margin: 0 auto;
}

.section-2-slider-item img {
    width: 50px;
    height: 50px;
    margin: 0 auto;
}

.section-2-slider-item p {
    font-style: normal;
    text-align: center;
    font-weight: 600;
    font-size: 18px;
    line-height: 22px;
    color: #25233A;
}

.section-2-slider-item button {
    width: 140px;
    height: 40px;
    margin: 0 auto;
    border: 2px solid #377EF9;
    background: rgba(241, 241, 241, 0.9077);
    box-sizing: border-box;
    border-radius: 20px;
    font-family: Open Sans;
    font-size: 16px;
    line-height: 22px;
    color: #377EF9;
    opacity: 0.9;
}

.section-2-slider-item button:hover {
  color: #146aff;
  border-color: #146aff;
}

.title {
    font-style: normal;
    font-weight: 500;
    font-size: 36px;
    line-height: 44px;
    color: #333333;
}

.section-2-slider-item p {
    margin: 20px 0;
}

@media all and (-ms-high-contrast: none),
(-ms-high-contrast: active) {
    .section-3-card-contentBlock button {
        margin-top: 45px;
    }
}

#section-2 .column {
    justify-content: space-around;
}

.section-2-slider-item p {
    height: 40px;
}

#section-3 {
    padding: 50px 0;
}

#section-3 .title {
    font-style: normal;
    font-weight: 500;
    font-size: 36px;
    line-height: 44px;
    color: #333333;
}

#section-3 .section-3-card {
    margin: 0 auto;
    margin-bottom: 50px;
    width: 350px;
    height: 620px;
    position: relative;
}

@media screen and (max-width: 420px) {
    #section-3 .section-3-card {
        width: 300px;
        height: 600px;
    }
}

@media screen and (max-width: 420px) {
    #section-3 .section-3-card {
        margin-top: 0;
    }
}


img[src="img/pl.svg"] {
    border-radius: 10px;
}

@media screen and (max-width: 420px) {
    img[src="img/pl.svg"] {
        width: 300px;
    }
}

.section-3-card-contentBlock {
    background-color: #ffffff;
    position: absolute;
    width: 300px;
    height: 289px;
    padding: 20px;
    box-sizing: border-box;
    bottom: 0;
    opacity: 0.9;
    background: #FFFFFF;
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
}

@media screen and (max-width: 420px) {
    .section-3-card-contentBlock {
        width: 250px;
    }
}

.section-3-card-contentBlock-title {
    position: relative;
    margin-bottom: 30px;
    width: 90%;
    margin: 0 auto;
}

.section-3-card-contentBlock-title p {
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 29px;
    color: #25233A;
}

.section-3-card-contentBlock-description {
    position: relative;
    justify-content: flex-start;
}

.section-3-card-contentBlock-description img {
    margin-right: 10px;
}

.section-3-card-contentBlock-description p {
    font-family: Open Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 22px;
    color: #25233A;
}

.section-3-card-contentBlock-featuresRow {
    position: relative;
    margin: 10px 0;
}

.section-3-card-contentBlock-feature {
    width: 100px;
    height: 30px;
}

.section-3-card-contentBlock-feature img {
    width: 30px;
}

.section-3-card-contentBlock-feature .up {
    font-family: Open Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 22px;
    color: #25233A;
}

.section-3-card-contentBlock-feature .down {
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 29px;
    color: #25233A;
}
/* ... */

